Project

General

Profile

Actions

Bug #22819

closed

librbd::object_map::InvalidateRequest: 0x7fbd100beed0 should_complete: r=0

Added by Konstantin Shalygin about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
luminous
Regression:
No
Severity:
4 - irritation
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

What I do:

1. rbd was created with jewel client on Kraken Cluster.
2. Cluster and clients now 12.12.2
3. I was enable features 'exclusive-lock, object-map, fast-diff'.

# rbd info replicated_rbd/volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc
rbd image 'volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc':
        size 10240 MB in 2560 objects
        order 22 (4096 kB objects)
        block_name_prefix: rbd_data.ac127365804b2
        format: 2
        features: layering, striping, exclusive-lock, object-map, fast-diff
        flags: object map invalid, fast diff invalid
        stripe unit: 4096 kB
        stripe count: 1

4. Run 'object-map check'.

Expect: "Object map is failed, please run 'object-map rebuild'".
Actual results: see attached log.

5. I was stop IO to this rbd and perform 'object-map rebuild'.

# rbd status replicated_rbd/volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc
Watchers: none
# rbd object-map rebuild replicated_rbd/volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc
Object Map Rebuild: 100% complete...done.

6. And check again object-map.

# rbd info replicated_rbd/volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc
rbd image 'volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc':
        size 10240 MB in 2560 objects
        order 22 (4096 kB objects)
        block_name_prefix: rbd_data.ac127365804b2
        format: 2
        features: layering, striping, exclusive-lock, object-map, fast-diff
        flags:
        stripe unit: 4096 kB
        stripe count: 1
# rbd object-map check replicated_rbd/volume-d41e58c9-3dfb-439a-9723-382f4b9af3dc
Object Map Check: 100% complete...done.

Files

1111 (135 KB) 1111 rbd object-map check stdout,stderr Konstantin Shalygin, 01/27/2018 08:41 AM

Related issues 1 (0 open1 closed)

Copied to rbd - Backport #22857: luminous: librbd::object_map::InvalidateRequest: 0x7fbd100beed0 should_complete: r=0ResolvedPrashant DActions
Actions #1

Updated by Jason Dillaman about 6 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
  • Target version deleted (v12.2.2)
  • Backport set to luminous
  • Release deleted (luminous)
Actions #2

Updated by Jason Dillaman about 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #22857: luminous: librbd::object_map::InvalidateRequest: 0x7fbd100beed0 should_complete: r=0 added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF