librbd: potential crash if object map check encounters error

Fixes: http://tracker.ceph.com/issues/22819
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit c8d32546095829663022d9d6331809b1f311b839)